# serpent-bitslicing-cpp

./: .gitignore  CMakeLists.txt  README.en.md  README.md  README.pt.md
include/: sboxes.hpp  serpent.hpp
include/utils/: benchmark.hpp  mem_utils.hpp
src/: main.cpp
tests/: PractRand_Serpent_1GB_tf2_te1_FullReport.md
